fix(console): align recommend icon color with text

--- a/packages/console/src/pages/GetStarted/index.module.scss
+++ b/packages/console/src/pages/GetStarted/index.module.scss
@@ -130,6 +130,7 @@
 .recommendedTagIcon {
   width: 10px;
   height: 10px;
+  color: inherit;
   flex-shrink: 0;
 }
 
